<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_name" />

        <!-- Product Name field -->
        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/product_name"
            android:inputType="textCapWords" />


        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/price" />

        <!-- Price field -->
        <EditText
            android:id="@+id/edit_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/price"
            android:inputType="numberDecimal" />

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/quantity" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_margin">

            <Button
                android:id="@+id/button_decrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="decreaseQuantity"
                android:text="@string/button_decrement_text" />

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/quantity"
                android:inputType="number"
                android:paddingBottom="@dimen/activity_spacing"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium" />

            <Button
                android:id="@+id/button_increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="increaseQuantity"
                android:text="@string/button_increment_text" />

        </LinearLayout>

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_name" />

        <!-- Supplier Name field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/supplier_name"
            android:inputType="textCapWords" />

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_phone_number" />

        <!-- Supplier phone number field -->
        <EditText
            android:id="@+id/edit_supplier_phone_number"
            style="@style/EditorFieldStyle"
            android:hint="@string/supplier_phone_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/contact_supplier_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_spacing"
            android:onClick="contactSupplier"
            android:text="@string/button_contact_supplier" />

    </LinearLayout>
</ScrollView>